# gemini-vision-mcp

./: .gitignore  ALPHA_RICK_SETUP.md  QUICKSTART.md  README.md  SETUP.md  mcp.json  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  config.json
.planning/phases/1/: 1-SUMMARY.md
.planning/phases/2/: 2-SUMMARY.md
.planning/phases/3/: 3-SUMMARY.md
.planning/phases/4/: 4-SUMMARY.md
.planning/phases/5/: 5-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/wheres_waldo/: __init__.py  server.py
src/wheres_waldo/models/: __init__.py  domain.py
src/wheres_waldo/services/: __init__.py  baseline.py  cache.py  capture.py  classification.py  comparison.py  config.py  conversation.py  gemini_integration.py  storage.py
src/wheres_waldo/tools/: __init__.py  visual_tools.py
src/wheres_waldo/utils/: __init__.py  helpers.py  logging.py
